--- a/assets/css/pac4.css
+++ b/assets/css/pac4.css
@@ -20,13 +20,16 @@ body {
 }
 
 .bottom {
-	margin-top: 5px;
+	margin-top: 20px;
 	background-color: steelblue;
 	padding: 4px;
 	text-align: center;
 }
 
-iframe {
+
+}
+
+#history {
 	margin-left: 20px;
 }
 
@@ -47,6 +50,9 @@ h5 {
 	color:white;
 }
 
+iframe, img {
+	box-shadow: 10px 10px 5px #888888;
+}
 .social {
 	margin-right: 10px;
 	margin-left: 10px;
